<resources>
    <string name="app_name">Oriyoung</string>
    <string name="html_trungtam"><![CDATA[
    • Các đơn hàng phát sinh từ Đà Nẵng trở ra khu vực phía Bắc sẽ được gửi đi từ trung tâm vận hành phía Bắc của OriYoung.\n
    • Các đơn còn lại sẽ được đóng gói và vận chuyển từ trung tâm phía Nam.\n
]]></string>
    <string name="html_thoigian"><![CDATA[
    • Đơn nội thành Hà Nội và Hồ Chí Minh: Khách hàng sẽ nhận được trong vòng 1 -2 ngày kể từ khi đơn hàng được xác nhận (trừ trường hợp đơn hàng dạng đặt trước hoặc chưa đủ tồn kho, OriYoung sẽ gửi đi từ kho vận hành khác tỉnh và CSKH của OriYoung sẽ thông báo cho khách hàng về vấn đề này). Thông thường có thể sớm hơn tuỳ thuộc vào thời gian khách hàng đặt (Không tính chủ nhật và ngày lễ).\n
    • Các khu vực khác: 2-5 ngày (thường là 2-4 ngày), nếu sau 3 ngày kể từ khi đặt hàng mà Anh/Chị chưa nhận được cuộc gọi giao hàng của bưu tá thì vui lòng xin liên hệ Coolmate để được hỗ trợ (không bao gồm chủ nhật và ngày lễ).\n
    • LƯU Ý: Trong trường hợp khách hàng cần nhận hàng gấp thì có thể liên hệ Hotline OriYoung xxxx xxxx để được hỗ trợ. OriYoung không cam kết có thể hỗ trợ các trường hợp khẩn cấp 100%, tuy nhiên OriYoung chắc chắn sẽ làm mọi cách có thể để giúp khách hàng giải quyết công việc của mình.
]]></string>
    <string name="skip_onboarding">Bỏ qua</string>
    <string name="onboarding_login">Đăng nhập ngay!</string>
    <string name="no_account">Bạn chưa có tài khoản?</string>
    <string name="signup_now">Đăng ký!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboard1_title">Tận hưởng ưu đãi với OriYoung App</string>
    <string name="onboard1_subtitle">Giá ưu đãi chỉ dành riêng trên ứng dụng. Sản phẩm độc quyền chỉ có trên cửa hàng online.</string>
    <string name="onboard2_title">Hiểu và Đáp ứng ngay nhu cầu của bạn</string>
    <string name="onboard2_subtitle">Mua sắm mọi lúc, mọi nơi. Xem trước sản phẩm yêu thích và được thông báo các sự kiện đặc biệt.</string>
    <string name="onboard3_title">Miễn phí giao hàng toàn quốc</string>
    <string name="onboard3_subtitle">Áp dụng cho đơn hàng từ 89.000đ</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="changepassword_title">Đổi mật khẩu</string>
    <string name="changepassword_row1">Mật khẩu hiện tại</string>
    <string name="changepassword_newpassword">Mật khẩu mới</string>
    <string name="changepassword_retypepassword">Nhập lại mật khẩu</string>
    <string name="dialog_deleteaccount_title">Xác Nhận Xóa Tài Khoản</string>
    <string name="dialog_deleteaccount_subtitle">Bằng việc đồng ý, tài khoản của bạn sẽ được xóa. Bạn thật sự muốn xóa tài khoản này?</string>
    <string name="dialog_logout_title">Xác Nhận Đăng Xuất</string>
    <string name="dialog_logout_subtitle">Khi đăng xuất tài khoản của bạn sẽ không thể tiếp tục mua sắm và sử dụng ưu đãi của OriYoung! Bạn chắc chắn muốn đăng xuất?</string>
    <string name="setting_title">Cài đặt</string>
    <string name="setting_changepassword">Đổi mật khẩu</string>
    <string name="setting_deleteaccount">Xóa tài khoản</string>
    <string name="setting_noti">Thông báo</string>
    <string name="account_title">OriYoung xin chào!</string>
    <string name="account_subtitle">Đăng nhập để trải nghiệm mua sắm và nhận được những ưu đãi hấp dẫn dành riêng cho bạn!</string>
    <string name="account_user_infor">Thông tin cá nhân</string>
    <string name="account_preferential">Ưu đãi của tôi</string>
    <string name="account_support_center">Trung tâm hỗ trợ</string>
    <string name="account_setting">Cài đặt</string>
    <string name="account_contact_oriyoung">Liên hệ OriYoung</string>
    <string name="account_user_name">Trúc Ca</string>
    <string name="account_user_phone">0324657544</string>
    <string name="UserInfo">Thông tin cá nhân</string>
    <string name="infoDetail_fullName">Họ và tên:</string>
    <string name="sign">*</string>
    <string name="infoDetail_txtRadioFemale">Nữ</string>
    <string name="infoDetail_txtRadioMale">Nam</string>
    <string name="infoDetail_radioSecret">Không tiết lộ</string>
    <string name="infoDetail_phone">Số điện thoại</string>
    <string name="infoDetail_email">Email</string>
    <string name="infoDetail_btnEdit">Chỉnh sửa</string>
    <string name="infoDetail_btnCancel">Hủy</string>
    <string name="Info_fullname">Họ và tên:</string>
    <string name="Info_nameDetail">Nguyen Van A</string>
    <string name="Info_gender">Giới tinh</string>
    <string name="Info_GenderDetail">Nữ</string>
    <string name="Info_emailDetail">ue.edu @gmai.com</string>
    <string name="Info_Email">Địa chỉ email</string>
    <string name="Info_btnEdit">Chỉnh sửa</string>
    <string name="Info_birthDetail">09/04/1780</string>
    <string name="Info_birth">Ngày sinh</string>
    <string name="infoDetail_birth">Ngày sinh</string>
    <string name="cart_txtTitle">Giỏ hàng</string>
    <string name="cart_orderInfo">Thông tin đơn hàng</string>
    <string name="cart_apply">Áp dụng</string>
    <string name="cart_tempTotal">Tạm tính</string>
    <string name="cart_tempTotalDetail">1.000.000</string>
    <string name="cart_discount">Khuyến mãi</string>
    <string name="cart_discountDetail">30.000</string>
    <string name="cart_total">Tổng thanh toán</string>
    <string name="cart_totalDetail">1.000.000</string>
    <string name="cart_checkout">Thanh toán</string>
    <string name="nav_taikhoan">Tài khoản</string>
    <string name="nav_wishlist">Yêu thích</string>
    <string name="nav_danhmuc">Danh mục</string>
    <string name="nav_trangchu">Trang chủ</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="slogan">Young Beauty - Young Society</string>
    <string name="hotproduct">Sản phẩm nổi bật</string>
    <string name="xemthem">Xem thêm</string>
    <string name="Login_title">OriYoung Chào Bạn!</string>
    <string name="Login_subtitle_1">Tài khoản</string>
    <string name="Login_mail">Nhập mail</string>
    <string name="Login_subtitle_2">Mật khẩu</string>
    <string name="Login_password">Nhập mật khẩu</string>
    <string name="Required">*</string>
    <string name="Forget_pass">Quên mật khẩu?</string>
    <string name="Remember_login">Ghi nhớ</string>
    <string name="Login">Đăng nhập</string>
    <string name="Login_option">hoặc đăng nhập với</string>
    <string name="Login_mail_error">Email không hợp lệ, vui lòng thử lại</string>
    <string name="Login_pass_error">Mật khẩu từ 8 ký tự trở lên và chứa ít nhất 1 chữ số</string>
    <string name="Empty_error">Vui lòng nhập thông tin!</string>
    <string name="Signup_title">Đăng ký tài khoản OriYoung</string>
    <string name="Signup_name">Họ và tên</string>
    <string name="Signup_name_hint">Nhập tên của bạn</string>
    <string name="Signup_DOB">Sinh nhật</string>
    <string name="Signup_DOB_hint">DD/MM/YYYY</string>
    <string name="Signup_gender">Giới tính</string>
    <string name="Signup_gender_f">Nữ</string>
    <string name="Signup_gender_m">Nam</string>
    <string name="Signup_gender_n">Không tiết lộ</string>
    <string name="Signup_ques">Bạn đã là thành viên Nhà Ori?</string>
    <string name="Signup_pass">Mật khẩu</string>
    <string name="Signup_policy">Tôi đã đọc và đồng ý với</string>
    <string name="Signup_policy_detail">Điều khoản và chính sách</string>
    <string name="Forget_pass_title">Quên mật khẩu</string>
    <string name="Forget_pass_subtitle">Email</string>
    <string name="Forget_pass_description">Chúng tôi gửi thông báo qua email để phục vụ mục đích bảo mật và hỗ trợ bạn đăng nhập.</string>
    <string name="Continue">Tiếp tục</string>
    <string name="Reset_pass_title">Đặt lại mật khẩu</string>
    <string name="Reset_pass_subtitle_1">Mật khẩu mới</string>
    <string name="Reset_pass_subtitle_2">Nhập lại mật khẩu</string>
    <string name="Reset_pass_subtitle_3">Nhập lại mật khẩu mới</string>
    <string name="Reset_pass_error">Mật khẩu không khớp, vui lòng kiểm tra lại</string>
    <string name="Confirm">Xác nhận</string>
    <string name="Error">Đã xảy ra sự cố</string>
    <string name="Error_description">Tài khoản hoặc mật khẩu không chính xác, vui lòng thử lại!</string>
    <string name="Try_again">Thử lại</string>
    <string name="html_mucdich"><![CDATA[
    Chúng tôi thu thập thông tin cá nhân chỉ cần thiết nhằm phục vụ cho các mục đích:\n
    • Đơn Hàng: để xử lý các vấn đề liên quan đến đơn đặt hàng của bạn.\n
    • Duy Trì Tài Khoản: để tạo và duy trình tài khoản của bạn với chúng tôi, bao gồm cả các chương trình khách hàng thân thiết hoặc các chương trình thưởng đi kèm với tài khoản của bạn.\n
    • Dịch Vụ Chăm Sóc Khách Hàng: bao gồm các phản hồi cho các yêu cầu, khiếu nại và phản hồi của bạn.\n
    • An Ninh: cho các mục đích ngăn ngừa các hoạt động phá hủy tài khoản người dùng của khách hàng hoặc các hoạt động giả mạo khách hàng.\n
    • Theo yêu cầu của pháp luật: tùy quy định của pháp luật vào từng thời điểm, chúng tôi có thể thu thập, lưu trữ và cung cấp theo yêu cầu của cơ quan nhà nước có thẩm quyền.\n
]]></string>
    <string name="html_bienphap"><![CDATA[
    • Bảo đảm an toàn trong môi trường vận hành: chúng tôi lưu trữ thông tin cá nhân khách hàng trong môi trường vận hành an toàn và chỉ có nhân viên, đại diện và nhà cung cấp dịch vụ có thể truy cập trên cơ sở cần phải biết. Chúng tôi tuân theo các tiêu chuẩn ngành, pháp luật trong việc bảo mật thông tin cá nhân khách hàng.\n
    • Trong trường hợp máy chủ lưu trữ thông tin bị hacker tấn công dẫn đến mất mát dữ liệu cá nhân khách hàng, chúng tôi sẽ có trách nhiệm thông báo vụ việc cho cơ quan chức năng để điều tra xử lý kịp thời và thông báo cho khách hàng được biết.\n
    •  Các thông tin thanh toán: được bảo mật theo tiêu chuẩn ngành.\n
]]></string>
    <string name="html_quyenloi"><![CDATA[
    • Khách hàng có quyền cung cấp thông tin cá nhân cho chúng tôi và có thể thay đổi quyết định đó vào bất cứ lúc nào.\n
    • Khách hàng có quyền tự kiểm tra, cập nhật, điều chỉnh thông tin cá nhân của mình bằng cách đăng nhập vào tài khoản và chỉnh sửa thông tin cá nhân hoặc yêu cầu chúng tôi thực hiện việc này.\n
]]></string>
    <string name="html_xoa"><![CDATA[
    • Khách hàng có quyền yêu cầu xóa bỏ hoàn toàn các thông tin cá nhân lưu trữ trên hệ thống của chúng tôi bất cứ khi nào.\n
    • Khách hàng gửi thư điện tử về địa chỉ oriyoung@oriyounggmail.com để yêu cầu xóa bỏ thông tin cá nhân hoàn toàn khỏi hệ thống.
]]></string>
    <string name="Search">Tìm sản phẩm</string>
    <string name="product_name">Nước tẩy trang hoa hồng Cocoon tẩy sạch makeup và cấp ẩm 301ml</string>
    <string name="product_price">100.000 VNĐ</string>
    <string name="rating_value">5.0</string>
    <string name="hint_search">FREESHIP toàn quốc đơn từ 89K</string>
    <string name="category">Danh mục sản phẩm</string>
    <string name="input_voucher">Nhập mã giảm giá</string>
    <string name="mission">“Không chỉ nỗ lực và quan tâm đến vẻ đẹp của khách hàng, OriYoung còn hành động tích cực vì xã hội, đại diện cho thế hệ làm đẹp có ý thức"</string>
    <string name="discount_title">Deal hời - Giảm giá sốc</string>
    <string name="brand">Thương hiệu</string>
    <string name="my_voucher_noti">Bạn chưa có ưu đãi nào!</string>
    <string name="go_to_store">Đi đến cửa hàng</string>
    <string name="add">+</string>
    <string name="decrease">-</string>
    <string name="quantity">1</string>
    <string name="add_product">Thêm giỏ hàng</string>
    <string name="buy">Mua ngay</string>
    <string name="rating_count">(2 lượt đánh giá)</string>
    <string name="product_description_title">Thông tin sản phẩm</string>
</resources>