<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primarybackground">
    <LinearLayout
        android:id="@+id/LinearThongtin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/txtOrderInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/cart_orderInfo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin">

            <EditText
                android:id="@+id/edtVoucher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_button"
                android:fontFamily="@font/gilroy_regular"
                android:hint="@string/input_voucher"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/medium_textSize"
                app:layout_constraintEnd_toStartOf="@+id/btnAppliedVoucher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="@dimen/medium_margin"/>


            <Button
                android:id="@+id/btnAppliedVoucher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primarygreen"
                app:backgroundTint="@null"
                android:textColor="@color/white"
                android:background="@drawable/button_layout_cancel"
                android:text="@string/cart_apply"
                android:fontFamily="@font/gilroy_semibold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/small_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_tempTotal"
                android:fontFamily="@font/gilroy_regular"
                android:textSize="@dimen/small_textSize"
                android:layout_gravity="start"/>
            <TextView
                android:id="@+id/txtTempTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_tempTotalDetail"
                android:layout_weight="1"
                android:fontFamily="@font/gilroy_semibold"
                android:textSize="@dimen/small_textSize"
                android:gravity="end"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_discount"
                android:fontFamily="@font/gilroy_regular"
                android:textSize="@dimen/small_textSize"
                android:layout_gravity="start"/>
            <TextView
                android:id="@+id/txtDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_discountDetail"
                android:layout_weight="1"
                android:textColor="@color/secondaryorange"
                android:fontFamily="@font/gilroy_bold"
                android:textSize="@dimen/small_textSize"
                android:gravity="end"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_total"
                android:fontFamily="@font/gilroy_regular"
                android:textSize="@dimen/small_textSize"
                android:layout_gravity="start"/>
            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_totalDetail"
                android:layout_weight="1"
                android:textColor="@color/secondaryorange"
                android:fontFamily="@font/gilroy_bold"
                android:textSize="@dimen/small_textSize"
                android:gravity="end"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*Đã bao gồm VAT"
                android:fontFamily="@font/gilroy_regular_italic"
                android:textSize="10dp"
                android:layout_gravity="start"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primarygreen"
            android:fontFamily="@font/gilroy_semibold"
            android:text="@string/cart_checkout"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>