<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/productbuttonlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/medium_margin"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="@dimen/large_vertical_padding"
            android:layout_height="@dimen/large_vertical_padding"
            android:background="@drawable/frame_add_product"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/txtDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrease"
                android:textColor="@color/primarygreen"
                android:textSize="@dimen/medium_textSize"
                android:fontFamily="@font/gilroy_medium"
                android:layout_weight="3"
                android:paddingStart="@dimen/medium_margin"/>
            <TextView
                android:id="@+id/txtQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textColor="@color/primarygreen"
                android:textSize="@dimen/medium_textSize"
                android:fontFamily="@font/gilroy_medium"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/txtAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/primarygreen"
                android:textSize="@dimen/medium_textSize"
                android:fontFamily="@font/gilroy_medium"
                android:layout_weight="3"
                android:gravity="end|right"
                android:paddingEnd="@dimen/medium_margin"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/large_vertical_padding"
        android:layout_weight="6"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/small_margin">
        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/large_vertical_padding"
            android:text="@string/add_product"
            android:textSize="@dimen/medium_textSize"
            android:fontFamily="@font/gilroy_bold"
            android:layout_weight="4"/>

        <Button
            android:id="@+id/btnBuyNow"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/large_vertical_padding"
            android:text="@string/buy"
            android:textSize="@dimen/medium_textSize"
            android:fontFamily="@font/gilroy_bold"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_weight="3"/>
    </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>