<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/horizontal_padding">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imvlogofull"
                android:layout_width="172dp"
                android:layout_height="117dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/logofull"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/txtLoginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Login_title"
                android:textSize="@dimen/h4_textSize"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/primarygreen"
                app:layout_constraintTop_toBottomOf="@id/imvlogofull"
                android:layout_marginTop="@dimen/large_vertical_padding"/>
            <LinearLayout
                android:id="@+id/inputPhoneTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/txtLoginTitle"
                android:layout_marginTop="@dimen/large_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Login_subtitle_1"
                    android:textSize="@dimen/medium_textSize"
                    android:fontFamily="@font/gilroy_medium"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Required"
                    android:textSize="@dimen/medium_textSize"
                    android:fontFamily="@font/gilroy_medium"
                    android:textColor="@color/error"/>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/inputPhoneTitle"
                android:layout_marginTop="@dimen/large_margin"
                app:hintEnabled="false"
                app:endIconMode="clear_text"
                app:errorContentDescription="@string/Login_mail_error"
                app:boxStrokeErrorColor="@color/error"
                app:errorIconTintMode="src_atop">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextInputMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Login_mail"
                    android:textColorHint="@color/primarygreen"
                    android:fontFamily="@font/gilroy_medium"
                    android:background="@drawable/stroke"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:id="@+id/inputPasswordTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/inputEmail"
                android:layout_marginTop="@dimen/large_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Login_subtitle_2"
                    android:textSize="@dimen/medium_textSize"
                    android:fontFamily="@font/gilroy_medium"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Required"
                    android:textSize="@dimen/medium_textSize"
                    android:fontFamily="@font/gilroy_medium"
                    android:textColor="@color/error"/>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/inputPasswordTitle"
                android:layout_marginTop="@dimen/large_margin"
                app:hintEnabled="false"
                app:endIconMode="password_toggle"
                app:errorContentDescription="@string/Login_pass_error"
                app:boxStrokeErrorColor="@color/error"
                app:errorIconDrawable="@drawable/ic_error">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Login_password"
                    android:textColorHint="@color/primarygreen"
                    android:fontFamily="@font/gilroy_medium"
                    android:background="@drawable/stroke"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:id="@+id/ForgetLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/inputPassword"
                android:layout_marginTop="@dimen/horizontal_padding"
                app:layout_constraintEnd_toEndOf="@id/inputPassword"
                android:weightSum="10">
                <TextView
                    android:id="@+id/txtForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Forget_pass"
                    android:textSize="@dimen/medium_textSize"
                    android:fontFamily="@font/gilroy_medium"
                    android:textColor="@color/black"
                    android:layout_weight="9"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/medium_textSize"
                    android:src="@drawable/ic_radio_button"
                    android:layout_weight=".5"
                    android:gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Remember_login"
                    android:textSize="@dimen/medium_textSize"
                    android:fontFamily="@font/gilroy_medium"
                    android:textColor="@color/black"
                    android:layout_weight=".5"
                    android:gravity="end"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Login"
                android:textSize="@dimen/h4_textSize"
                android:fontFamily="@font/gilroy_bold"
                android:backgroundTint="@color/primarygreen"
                app:layout_constraintTop_toBottomOf="@id/ForgetLogin"
                android:layout_marginTop="@dimen/vertical_padding"/>
            <LinearLayout
                android:id="@+id/LoginOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                android:layout_marginTop="@dimen/vertical_padding"
                app:layout_constraintEnd_toEndOf="@id/ForgetLogin"
                android:weightSum="10">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:src="@drawable/line"
                    android:layout_weight="3"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Login_option"
                    android:textSize="@dimen/medium_textSize"
                    android:textColor="@color/primarygreen"
                    android:fontFamily="@font/gilroy_medium"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:src="@drawable/line"
                    android:layout_weight="3"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/LoginOptionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/LoginOption"
                android:layout_marginTop="@dimen/vertical_padding"
                app:layout_constraintEnd_toEndOf="@id/ForgetLogin"
                android:weightSum="10">
                <ImageView
                    android:id="@+id/imvGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google"
                    android:layout_weight="5"
                    android:background="@drawable/stroke_button"
                    android:padding="@dimen/medium_margin"/>
                <ImageView
                    android:id="@+id/imvFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook"
                    android:layout_weight="5"
                    android:background="@drawable/stroke_button"
                    android:padding="@dimen/medium_margin"
                    android:layout_marginStart="@dimen/medium_margin"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/SignUpTextBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/LoginOptionButton"
                android:layout_marginTop="@dimen/vertical_padding"
                app:layout_constraintEnd_toEndOf="@id/ForgetLogin"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:textSize="@dimen/medium_textSize"
                    android:textColor="@color/black"
                    android:fontFamily="@font/gilroy_medium"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/txtSignupNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_now"
                    android:textSize="@dimen/medium_textSize"
                    android:textColor="@color/primarygreen"
                    android:fontFamily="@font/gilroy_bold"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
